--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </section>
       <section class="benefits-section section">
         <div class="container">
-          <h2 class="benefits-title">Наші переваги</h2>
+          <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="benefits-list">
             <li>
               <div class="benefits-icon-background">
@@ -519,103 +519,196 @@
     </main>
     <footer>
       <div class="container">
-        <div class="footer-links">
-          <div>
-            <a href="./index.html" class="logo footer-logo"
-              ><span class="logo-web">Web</span
-              ><span class="logo-studio">Studio</span></a
-            >
-            <address>
-              <ul class="footer-list">
-                <li class="footer-item">
+        <div class="footer-row">
+          <div class="footer-links">
+            <div>
+              <a href="./index.html" class="logo footer-logo"
+                ><span class="logo-web">Web</span
+                ><span class="logo-studio">Studio</span></a
+              >
+              <address>
+                <ul class="footer-list">
+                  <li class="footer-item">
+                    <a
+                      href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      class="map"
+                      >м. Київ, пр-т Лесі Українки, 26</a
+                    >
+                  </li>
+                  <li class="footer-item">
+                    <a href="mailto:info@devstudio.com" class="communication"
+                      >info@devstudio.com</a
+                    >
+                  </li>
+                  <li class="footer-item">
+                    <a href="tel:+380961111111" class="communication"
+                      >+38 096 111 11 11</a
+                    >
+                  </li>
+                </ul>
+              </address>
+            </div>
+            <div>
+              <h3 class="footer-block-title">приєднуйтесь</h3>
+              <ul class="footer-socials">
+                <li>
                   <a
-                    href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                    class="footer-socials-link"
+                    href="https://www.instagram.com/"
                     target="_blank"
                     rel="noopener noreferrer nofollow"
-                    class="map"
-                    >м. Київ, пр-т Лесі Українки, 26</a
+                    aria-label="іконка instagram"
                   >
+                    <svg class="socials-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#instagram"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="footer-item">
-                  <a href="mailto:info@devstudio.com" class="communication"
-                    >info@devstudio.com</a
+                <li>
+                  <a
+                    class="footer-socials-link"
+                    href="https://twitter.com/"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    aria-label="іконка twitter"
                   >
+                    <svg class="socials-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#twitter"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="footer-item">
-                  <a href="tel:+380961111111" class="communication"
-                    >+38 096 111 11 11</a
+                <li>
+                  <a
+                    class="footer-socials-link"
+                    href="https://www.facebook.com/"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    aria-label="іконка facebook"
                   >
+                    <svg class="socials-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="footer-socials-link"
+                    href="https://www.linkedin.com/"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    aria-label="іконка linkedin"
+                  >
+                    <svg class="socials-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
-            </address>
+            </div>
           </div>
           <div>
-            <h3 class="socials-title">приєднуйтесь</h3>
-            <ul class="footer-socials">
-              <li>
-                <a
-                  class="footer-socials-link"
-                  href="https://www.instagram.com/"
-                  target="_blank"
-                  rel="noopener noreferrer nofollow"
-                  aria-label="іконка instagram"
-                >
-                  <svg class="socials-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a
-                  class="footer-socials-link"
-                  href="https://twitter.com/"
-                  target="_blank"
-                  rel="noopener noreferrer nofollow"
-                  aria-label="іконка twitter"
-                >
-                  <svg class="socials-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a
-                  class="footer-socials-link"
-                  href="https://www.facebook.com/"
-                  target="_blank"
-                  rel="noopener noreferrer nofollow"
-                  aria-label="іконка facebook"
-                >
-                  <svg class="socials-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a
-                  class="footer-socials-link"
-                  href="https://www.linkedin.com/"
-                  target="_blank"
-                  rel="noopener noreferrer nofollow"
-                  aria-label="іконка linkedin"
-                >
-                  <svg class="socials-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+            <form class="subscription">
+              <div class="subscription-block">
+                <p class="subscription-label footer-block-title">
+                  підпишіться на розсилку
+                </p>
+                <input
+                  type="email"
+                  name="e-mail"
+                  placeholder="E-mail"
+                  class="subscription-input"
+                  required
+                />
+              </div>
+              <button type="submit" class="subscription-button">
+                Підписатися
+                <svg class="subscription-icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-send"></use>
+                </svg>
+              </button>
+            </form>
           </div>
         </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="modal-btn" data-modal-close>
-          <svg class="modal-icon" width="11" height="11">
+        <button class="modal-button-close" data-modal-close>
+          <svg class="modal-icon-close" width="11" height="11">
             <use href="./images/symbol-defs.svg#vector"></use>
           </svg>
         </button>
+        <strong class="modal-title"
+          >Залиште свої дані, ми вам передзвонимо</strong
+        >
+        <form>
+          <div class="modal-group" role="group">
+            <label for="user-name" class="modal-label">Ім'я</label>
+            <div class="modal-elements">
+              <input
+                type="text"
+                name="user-name"
+                id="user-name"
+                class="modal-input"
+                required
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#person"></use>
+              </svg>
+            </div>
+            <label for="user-phone" class="modal-label">Телефон</label>
+            <div class="modal-elements">
+              <input
+                type="tel"
+                name="user-phone"
+                id="user-phone"
+                class="modal-input"
+                required
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#phone"></use>
+              </svg>
+            </div>
+            <label for="user-mail" class="modal-label">Пошта</label>
+            <div class="modal-elements">
+              <input
+                type="email"
+                name="user-mail"
+                id="user-mail"
+                class="modal-input"
+                required
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#email"></use>
+              </svg>
+            </div>
+            <label for="comments" class="modal-label">Коментар</label>
+            <div class="modal-elements">
+              <textarea
+                name="comments"
+                id="comments"
+                placeholder="Введіть текст"
+                rows="5"
+                class="modal-textarea"
+              ></textarea>
+            </div>
+          </div>
+          <div role="group" class="modal-checkbox">
+            <input
+              class="modal-checkbox-input"
+              type="checkbox"
+              id="user-agreement"
+            />
+            <label for="user-agreement" class="modal-checkbox-label"
+              >Погоджуюся з розсилкою та приймаю
+              <a href="#">Умови договору</a></label
+            >
+          </div>
+        </form>
+
+        <button type="submit" class="modal-button">Відправити</button>
       </div>
     </div>
     <script src="./js/modal.js"></script>
