--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
             />
             <label for="user-agreement" class="modal-checkbox-label"
               >Погоджуюся з розсилкою та приймаю
-              <a href="#">Умови договору</a></label
+              <a href="#" class="modal-checkbox-link">Умови договору</a></label
             >
           </div>
         </form>
